# transformers-examples-ja

./: .gitignore  README.md  mypy.ini  pyproject.toml
docs/: transformer.md
src/: mask_token_prediction.py  sentence_embedding.py
src/bert-search/: README.md
src/bert-search/app/: build_index.py  main.py  nlp_utils.py
src/bert-search/app/api/api_v1/: urls.py
src/bert-search/app/api/api_v1/endpoints/: api.py
src/bert-search/app/templates/: index.html
src/bert-search/docker/: Dockerfile  docker-compose.yaml  pyproject.toml
src/transformers_from_scratch/: modules.py
